[package]
name = "hc-vault"
description = "A simple crate to interact with hashicorp's vault"
repository = "https://github.com/Lol3rrr/hc-vault"
version = "0.1.1"
authors = ["lol3rrr <s.loler03@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["vault", "hashicorp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.2.0" }
reqwest = { version = "0.10.9", features = ["blocking", "json"] }

[dev-dependencies]
serde_json = { version = "1.0" }
wiremock = { version = "0.3.0" }
tokio = { version = "0.2.23", features = ["full"] }
async-std = { version = "1.8.0" }
